# vpd111.api.com/routes/api.php
@@ -24,3 +24,6 @@ Route::get('/categories/{id}', [\App\Http\Controllers\API\CategoryController::cl
 Route::delete("/categories/{id}", [\App\Http\Controllers\API\CategoryController::class, "delete"]);
 Route::post("/categories/edit/{id}", [\App\Http\Controllers\API\CategoryController::class, "edit"]);
 Route::get("categories/upload/{filename}", [\App\Http\Controllers\API\CategoryController::class, 'upload']);
+
+Route::post("register", [\App\Http\Controllers\API\AuthController::class, 'register']);
+Route::post("login", [\App\Http\Controllers\API\AuthController::class, 'login']);
